src/objects/Professor__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Professors_Courses_Accounts_Fees</relationshipLabel>
        <relationshipName>Professors_Courses_Accounts_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Rate__c</fullName>
        <label>Amount Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course_Account</label>
        <referenceTo>Course_Account__c</referenceTo>
        <relationshipName>Professors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Payment__c</fullName>
        <label>Date of Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>For_Year__c</fullName>
        <label>For Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Done ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Options__c</fullName>
        <label>Payment Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per Hour</fullName>
                </value>
                <value>
                    <fullName>Fixed for the entire Course</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Per_Hour_Rate__c</fullName>
        <label>Per Hour Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Per_Minute_Rate__c</fullName>
        <formula>(Per_Hour_Rate__c  / 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Per Minute Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Professor__c</fullName>
        <label>Professors</label>
        <referenceTo>Professors__c</referenceTo>
        <relationshipLabel>Professors_Courses_Accounts_Fees</relationshipLabel>
        <relationshipName>Professors_Courses_Accounts_Fees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Professor_Course_Account_Fees</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Professors_Courses_Accounts_Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Payment_Option_Rule_1</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Payment_Options__c, &apos;Per Hour&apos;),  ISBLANK( Per_Hour_Rate__c))</errorConditionFormula>
        <errorDisplayField>Per_Hour_Rate__c</errorDisplayField>
        <errorMessage>Please enter per hour rate</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Option_Rule_2</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Payment_Options__c, &apos;Fixed for the entire Course&apos;), ISBLANK( Amount_Rate__c ))</errorConditionFormula>
        <errorDisplayField>Amount_Rate__c</errorDisplayField>
        <errorMessage>Please enter the rate .</errorMessage>
    </validationRules>
</CustomObject>